# Advanced-RAG-monorepo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  RAG_SYSTEM_PLAN.md  README.md  SECURITY.md  clickhouse_config.xml  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/generation/: agents.py  router.py  semantic_cache.py
src/ingestion/: chunking.py  deepseek_ocr.py  docling_parser.py  metadata.py  router.py
src/observability/: config.py
src/retrieval/: engine.py  qdrant_client.py  query_processor.py  reranker.py
src/scripts/: ingest_folder.py
tests/evaluation/: golden_dataset.json  test_rag_pipeline.py
